<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iphoenixdemo.DeviceListActivity" >
    <ListView
        android:id="@+id/DeviceListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#999999"
        android:dividerHeight="1dp" />

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/SelectAll"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:text="@string/SelectAll" />

	    <Button
	        android:id="@+id/StartPreview"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:text="@string/StartPreview" />

	    <Button
	        android:id="@+id/CancelSelect"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:text="@string/CancelSelect" />

    </LinearLayout>
</RelativeLayout>